# fortran-libs

./: .appveyor.yml  .gitignore  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  ChangeLog  INSTALL  Makefile  README  README.md  VERSION  azure-pipelines.yml  build_local.sh  ci.cmake  meson.build  meson_options.txt  setup.cmake
.archive/: azure-pipelines.yml  ci_mac_meson.yml  meson_options.txt  openmp.patch
.archive/tests/: meson.build
.github/workflows/: ci.yml  ci_build.yml  ci_buildall.yml  ci_linux.yml  ci_linux_meson.yml  ci_mac.yml  ci_mac_meson.yml  ci_macos.yml  ci_windows.yml  ci_windows_meson.yml
MATLAB/: CMakeLists.txt  make.inc
Make.inc/: Makefile.FREEBSD10.PAR  Makefile.FREEBSD10.SEQ  Makefile.G95.PAR  Makefile.G95.SEQ  Makefile.INTEL.PAR  Makefile.INTEL.SEQ  Makefile.NEC.PAR  Makefile.NEC.SEQ  Makefile.SGI.PAR  Makefile.SGI.SEQ  Makefile.SP.PAR  Makefile.SP.SEQ  Makefile.SP64.PAR  Makefile.SP64.SEQ  Makefile.SUN.PAR  Makefile.SUN.SEQ  Makefile.WIN.MS-G95.SEQ  Makefile.WIN.MS-Intel.SEQ  Makefile.debian.PAR  Makefile.debian.SEQ  Makefile.inc.generic  Makefile.inc.generic.SEQ
PORD/: CMakeLists.txt  meson.build
PORD/lib/: CMakeLists.txt  meson.build
SCILAB/: builder.sce
archive/: .appveyor.yml
cmake/: MUMPSConfig.cmake.in  compilers.cmake  install.cmake  lapack.cmake  lapack_external.cmake  libraries.cmake  libraries.json  libraries.txt  meson.build  options.cmake  scalapack.cmake  scalapack_external.cmake  summary.cmake
cmake/Modules/: FindBLACS.cmake  FindLAPACK.cmake  FindMUMPS.cmake  FindSCALAPACK.cmake  FindScotch.cmake
examples/: CMakeLists.txt  Makefile  c_example.c  c_example_save_restore.c  csimpletest.F  csimpletest_save_restore.F  dsimpletest.F  dsimpletest_save_restore.F  meson.build  multiple_arithmetics_example.F  ssimpletest.F  ssimpletest_save_restore.F  zsimpletest.F  zsimpletest_save_restore.F
include/: cmumps_c.h  cmumps_root.h  cmumps_struc.h  dmumps_c.h  dmumps_root.h  dmumps_struc.h  meson.build  mumps_c_types.h  mumps_compat.h  smumps_c.h  smumps_root.h  smumps_struc.h  zmumps_c.h  zmumps_root.h  zmumps_struc.h
libseq/: CMakeLists.txt  Makefile  elapse.c  elapse.h  meson.build  mpi.f  mpi.h  mpic.c  mpif.h
src/: CMakeLists.txt  Makefile  ana_AMDMF.F  ana_blk.F  ana_blk_m.F  ana_omp_m.F  ana_orderings_wrappers_m.F  ana_set_ordering.F  bcast_errors.F  build_mumps_int_def.c  cana_LDLT_preprocess.F  cana_aux.F  cana_aux_ELT.F  cana_aux_par.F  cana_dist_m.F  cana_driver.F  cana_lr.F  cana_mtrans.F  cana_reordertree.F  carrowheads.F  cbcast_int.F  cend_driver.F  cfac_asm.F  cfac_asm_ELT.F  cfac_asm_master_ELT_m.F  cfac_asm_master_m.F  cfac_b.F  cfac_determinant.F  cfac_distrib_ELT.F  cfac_distrib_distentry.F  cfac_driver.F  cfac_front_LDLT_type1.F  cfac_front_LDLT_type2.F  cfac_front_LU_type1.F  cfac_front_LU_type2.F  cfac_front_aux.F  cfac_front_type2_aux.F  cfac_lastrtnelind.F  cfac_lr.F  cfac_mem_alloc_cb.F  (+423 more)
subprojects/: lapack.wrap  scalapack.wrap
tests/: CMakeLists.txt  assert.f90  d_simple.f90  d_simple.in.f90  d_simple_seq.f90  d_simple_seq.in.f90  meson.build  s_simple.f90  s_simple.in.f90  s_simple_seq.f90  s_simple_seq.in.f90  simple.f90  simple_seq.c  test_mumps.f90  test_mumps.in.f90  test_mumps_seq.f90  test_mumps_seq.in.f90
