option('CI', type: 'boolean', value: false, description : 'running on CI, do not run shaky tests', yield: true)
option('arith', type: 'array', choices: ['s','d','c','z'], value: ['s', 'd'], description: 'arith precision', yield: true)
option('ordering', type: 'array', choices: ['pord', 'metis', 'scotch'], value: ['pord'], description: 'ordering library(s)', yield: true)
option('mklroot', type: 'string', description: 'MKL root directory', yield: true)
option('parallel', type: 'boolean', value: true, description: 'true needs MPI and Scalapack, false does not', yield: true)
