option('CI', type: 'boolean', value: false, description : 'running on CI, do not run shaky tests', yield: true)
option('arith', type: 'array', choices: ['s','d','c','z'], value: ['d'], description: 'precision: s=real32, d=real64, c=complex(real32), z=complex(real64)', yield: true)
option('mklroot', type: 'string', description: 'MKL root directory', yield: true)
option('parallel', type: 'boolean', value: true, description: 'true needs MPI and Scalapack, false does not', yield: true)
option('intsize64', type: 'boolean', value: false, description: 'use 64-bit integers in C and Fortran')
option('openmp', type: 'boolean', value: false, description: 'use OpenMP (can be slower)', yield: true)
option('metis', type: 'boolean', value: false, description: 'use METIS', yield: true)
option('scotch', type: 'boolean', value: false, description: 'use Scotch', yield: true)
option('ClangTest', type: 'boolean', value: true, description: 'use MUMPS C-lang test')